--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,16 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/activity_background">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:numColumns="2"
-            android:verticalSpacing="5dp"
-            android:horizontalSpacing="5dp"
-            android:padding="5dp"
             android:gravity="center"
             android:stretchMode="columnWidth"
-            android:background="@color/white"/>
+            android:layout_margin="5dp"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
@@ -32,8 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             style="@style/CustomFloatingButton"
-            android:contentDescription="Filter"
             android:layout_margin="16dp"
+            android:contentDescription="@string/filter"
             android:src="@drawable/filter" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
