--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -15,7 +15,7 @@
             android:id="@+id/imgLogo"
             android:layout_width="110dp"
             android:layout_height="match_parent"
-            android:contentDescription="App Logo"
+            android:contentDescription="@string/app_logo"
             android:scaleType="centerInside"
             android:src="@drawable/app_logo_b"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@color/black"
-            android:contentDescription="Login"
+            android:contentDescription="@string/login"
             android:scaleType="fitCenter"
             android:src="@drawable/account"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +44,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@color/black"
-            android:contentDescription="Cart"
+            android:contentDescription="@string/cart"
             android:scaleType="fitCenter"
             android:src="@drawable/cart"
             app:layout_constraintBottom_toBottomOf="parent"
