--- a/app/src/main/res/layout/toolbar_logo_layout.xml
+++ b/app/src/main/res/layout/toolbar_logo_layout.xml
@@ -15,7 +15,7 @@
             android:id="@+id/imgLogo"
             android:layout_width="110dp"
             android:layout_height="match_parent"
-            android:contentDescription="App Logo"
+            android:contentDescription="@string/app_logo"
             android:scaleType="centerInside"
             android:src="@drawable/app_logo_b"
             app:layout_constraintBottom_toBottomOf="parent"
