add filter fragment

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="vertical_spacing">2dp</dimen>
     <dimen name="horizontal_spacing">2dp</dimen>
+    <dimen name="vertical_spacing_filter">-7dp</dimen>
 </resources>
