--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -7,9 +7,15 @@
     android:background="@color/black"
     style="@style/NoPaddingToolbar">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <ImageView
             android:id="@+id/imgLogo"
@@ -18,42 +24,70 @@
             android:contentDescription="@string/app_logo"
             android:scaleType="centerInside"
             android:src="@drawable/app_logo_b"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            />
 
-        <ImageButton
-            android:id="@+id/imgLogin"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/black"
-            android:contentDescription="@string/login"
-            android:scaleType="fitCenter"
-            android:src="@drawable/account"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.83"
-            app:layout_constraintStart_toEndOf="@+id/imgLogo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"
-            app:tint="@color/white" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            android:gravity="center|end">
 
-        <ImageButton
-            android:id="@+id/imgCart"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/black"
-            android:contentDescription="@string/cart"
-            android:scaleType="fitCenter"
-            android:src="@drawable/cart"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.83"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"
-            app:tint="@color/white" />
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageButton
+                    android:id="@+id/imgCart"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@color/black"
+                    android:contentDescription="@string/cart"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/cart"
+                    app:tint="@color/white"
+                    android:layout_marginEnd="10dp"/>
+
+                <TextView
+                    android:id="@+id/cart_badge"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_gravity="top|end"
+                    android:background="@drawable/badge_background"
+                    android:gravity="center"
+                    android:text="1"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+/>
+
+            </FrameLayout>
+
+
+            <ImageButton
+                android:id="@+id/imgLogin"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@color/black"
+                android:contentDescription="@string/login"
+                android:scaleType="fitCenter"
+                android:src="@drawable/account"
+                app:tint="@color/white"
+                android:layout_marginEnd="5dp"/>
+
+            <TextView
+                android:id="@+id/txtName"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Hi, Dan"
+                android:textColor="@color/white"
+                android:gravity="bottom"
+                android:layout_marginBottom="10dp"
+                android:textSize="15sp"/>
+            
+            <View
+                android:layout_width="10dp"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+    </LinearLayout>
 </androidx.appcompat.widget.Toolbar>
