--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,6 @@
         layout="@layout/toolbar_logo_layout"/>
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -59,12 +58,12 @@
             android:id="@+id/email_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_edit_text"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:padding="10dp"
-            android:background="@drawable/rounded_edit_text"
-            android:textColor="#000000"
-            android:paddingBottom="10dp" />
+            android:paddingBottom="10dp"
+            android:textColor="#000000" />
 
         <EditText
             android:id="@+id/password_input"
