--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,17 +8,17 @@
     tools:context=".view.LoginActivity">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
         android:padding="16dp"
-        android:layout_marginTop="70dp"
-        android:background="@color/white"
+
+
         app:layout_constraintTop_toBottomOf="@id/actionbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="NotSibling">
 
         <TextView
             android:id="@+id/sign_in_text"
