--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:text="Don’t have an account? Sign up."
             android:textSize="14sp"
-            android:textColor="#0000FF"
+            android:textColor="@color/black"
             android:layout_gravity="center"
             android:paddingBottom="30dp" />
 
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:text="Forgot your password?"
             android:textSize="14sp"
-            android:textColor="#0000FF"
+            android:textColor="#000000"
             android:paddingBottom="20dp"
             android:layout_gravity="center" />
 
@@ -88,8 +88,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="SIGN IN"
-            android:background="#FFD700"
-            android:textColor="#000000"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"
             android:padding="10dp"
             android:textStyle="bold" />
     </LinearLayout>
