--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".view.ReviewActivity">
 
-    <!-- Product Name -->
     <TextView
         android:id="@+id/product_name"
         android:layout_width="wrap_content"
@@ -21,7 +20,6 @@
         android:layout_marginTop="8dp"
         tools:ignore="NotSibling" />
 
-    <!-- Overall Rating Label -->
     <TextView
         android:id="@+id/rating_label"
         android:layout_width="wrap_content"
@@ -33,7 +31,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
-    <!-- Rating Bar -->
     <RatingBar
         android:id="@+id/rating_bar"
         android:layout_width="wrap_content"
@@ -45,7 +42,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"/>
 
-    <!-- Review Headline -->
     <EditText
         android:id="@+id/review_headline"
         android:layout_width="0dp"
@@ -58,7 +54,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"/>
 
-    <!-- Review Comments -->
     <EditText
         android:id="@+id/review_comment"
         android:layout_width="0dp"
@@ -72,7 +67,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"/>
 
-    <!-- Submit Button -->
     <Button
         android:id="@+id/submit_review"
         android:layout_width="0dp"
@@ -81,6 +75,7 @@
         app:layout_constraintTop_toBottomOf="@id/review_comment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/black"
         android:layout_marginTop="24dp"
         android:layout_marginHorizontal="16dp"/>
 
