--- a/app/src/main/res/layout/activity_detailed_info.xml
+++ b/app/src/main/res/layout/activity_detailed_info.xml
@@ -26,10 +26,12 @@
                     style="?android:attr/ratingBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:isIndicator="false"
-                    android:max="5"
+                    android:backgroundTint="@color/transparent"
+                    android:isIndicator="true"
                     android:numStars="5"
-                    android:stepSize="0.5" />
+                    android:progressTint="@color/ratingbar"
+                    android:secondaryProgressTint="@color/transparent"
+                    android:stepSize="0.1" />
 
                 <TextView
                     android:id="@+id/txtStarRate"
