edit size buttons

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="line_divide_background">#aaaaaa</color>
 
     <color name="hint_text_color">#777777</color>
+
+    <color name="size_btn_background">#dddddd</color>
 </resources>
