--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -12,10 +12,23 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <View
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1" >
+
+            <ImageButton
+                android:id="@+id/imgBack"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:background="@color/black"
+                android:contentDescription="@string/back"
+                android:scaleType="fitCenter"
+                android:src="@drawable/back"
+                app:tint="@color/white"
+                android:layout_marginStart="15dp"/>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imgLogo"
