--- a/app/src/main/res/layout/toolbar_logo_layout.xml
+++ b/app/src/main/res/layout/toolbar_logo_layout.xml
@@ -7,9 +7,27 @@
     android:background="@color/black"
     style="@style/NoPaddingToolbar">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" >
+
+            <ImageButton
+                android:id="@+id/imgBack"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:background="@color/black"
+                android:contentDescription="@string/back"
+                android:scaleType="fitCenter"
+                android:src="@drawable/back"
+                app:tint="@color/white"
+                android:layout_marginStart="15dp"/>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imgLogo"
@@ -23,6 +41,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
+    </LinearLayout>
 
 </androidx.appcompat.widget.Toolbar>
