--- a/app/src/main/res/layout/activity_detailed_info.xml
+++ b/app/src/main/res/layout/activity_detailed_info.xml
@@ -89,7 +89,7 @@
                 android:id="@+id/btnCart"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
+                android:layout_gravity="center"
                 android:backgroundTint="#C7C6C6"
                 android:enabled="false"
                 android:text="Add to cart"
@@ -102,27 +102,48 @@
                 android:background="?android:attr/listDivider"
                 android:scrollbarSize="10dp" />
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Reviews"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reviews"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_margin="12dp"
+                    android:layout_weight="1"/>
+
+                <ImageButton
+                    android:id="@+id/btnToggle"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:contentDescription="Toggle Reviews"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/more" />
+
+            </LinearLayout>
 
             <Button
-                android:id="@+id/btnToggle"
-                android:text="More"
+                android:id="@+id/btnReview"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:backgroundTint="@color/black"/>
+                android:layout_gravity="center"
+                android:backgroundTint="@color/black"
+                android:text="Write a review" />
 
             <LinearLayout
                 android:id="@+id/reviewListContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:layout_margin="10dp">
 
                 <TextView
                     android:id="@+id/reviewMessage"
@@ -138,14 +159,6 @@
                     android:layout_height="2dp"
                     android:background="@android:color/darker_gray"/>
             </LinearLayout>
-
-            <Button
-                android:id="@+id/btnReview"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:backgroundTint="@color/black"
-                android:text="Write a review" />
         </LinearLayout>
     </ScrollView>
 
