--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.CartActivity"
-    android:background="@color/activity_background">
+    tools:context=".view.CartActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/container"
@@ -172,14 +171,15 @@
 
                     <Button
                         android:id="@+id/btnCheckout"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/checkout"
                         android:backgroundTint="@color/black"
                         android:layout_marginTop="10dp"
                         android:layout_gravity="center"
                         android:textColor="@color/white"
-                        android:layout_marginBottom="20dp"/>
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginHorizontal="10dp"/>
                 </LinearLayout>
 
             </androidx.core.widget.NestedScrollView>
