--- a/app/src/main/res/layout/activity_detailed_info.xml
+++ b/app/src/main/res/layout/activity_detailed_info.xml
@@ -6,161 +6,185 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.DetailedInfoActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/activity_background">
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:background="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <FrameLayout
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="400dp" />
 
-                <RatingBar
-                    android:id="@+id/ratingBar"
-                    style="?android:attr/ratingBarStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/transparent"
-                    android:isIndicator="true"
-                    android:numStars="5"
-                    android:progressTint="@color/ratingbar"
-                    android:secondaryProgressTint="@color/transparent"
-                    android:stepSize="0.1" />
-
-                <TextView
-                    android:id="@+id/txtStarRate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="85dp"
-                    android:text="rating" />
-            </FrameLayout>
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:tabGravity="center"
+                app:tabIndicatorHeight="0dp"
+                android:background="@android:color/transparent" />
 
             <TextView
                 android:id="@+id/txtProductName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="product name"
-                android:textSize="20sp" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_marginStart="10dp"/>
 
             <TextView
                 android:id="@+id/txtProductPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="product price"
-                android:textSize="20sp" />
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"/>
 
-            <FrameLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:text="@string/select_a_size"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="30dp"/>
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="264dp"
-                    android:layout_height="226dp"
-                    android:layout_marginLeft="70dp"
-                    android:src="@drawable/placeholder" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="30dp">
-
-                <GridLayout
-                    android:id="@+id/sizeButtonGrid"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:backgroundTint="@color/colorPrimary"
-                    android:columnCount="5"
-                    android:orientation="horizontal"
-                    android:padding="5dp"
-                    android:rowCount="3" />
-
-            </FrameLayout>
+            <GridLayout
+                android:id="@+id/sizeButtonGrid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:columnCount="5"
+                android:layout_marginTop="10dp" />
 
             <Button
                 android:id="@+id/btnCart"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:backgroundTint="#C7C6C6"
+                android:backgroundTint="@color/hint_text_color"
                 android:enabled="false"
-                android:text="Add to cart"
-                android:textColorLink="@color/white" />
+                android:text="@string/add_to_cart"
+                android:textColorLink="@color/white"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="10dp"/>
 
             <View
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="?android:attr/listDivider"
-                android:scrollbarSize="10dp" />
-
+                android:layout_height="1dp"
+                android:background="@color/line_divide_background"
+                android:layout_marginTop="30dp"
+                android:layout_marginHorizontal="10dp"/>
 
             <LinearLayout
+                android:id="@+id/layoutReview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginTop="20dp">
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Reviews"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:layout_margin="12dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
 
-                <ImageButton
-                    android:id="@+id/btnToggle"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_margin="10dp"
-                    android:background="@null"
-                    android:contentDescription="Toggle Reviews"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/more" />
+                    <TextView
+                        android:id="@+id/txtReviewTitle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/reviews"
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"/>
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:gravity="center|end">
+
+                    <RatingBar
+                        android:id="@+id/ratingBar"
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/transparent"
+                        android:isIndicator="true"
+                        android:numStars="5"
+                        android:progressTint="@color/ratingbar"
+                        android:secondaryProgressTint="@color/transparent"
+                        android:stepSize="0.1"
+                        android:layout_marginEnd="5dp"/>
+
+                    <TextView
+                        android:id="@+id/txtStarRate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:layout_marginEnd="10dp"/>
+
+                    <ImageButton
+                        android:id="@+id/btnToggle"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:contentDescription="Toggle Reviews"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/download"
+                        app:tint="@color/black"
+                        android:background="@color/white"
+                        android:layout_marginRight="10dp"
+                        android:clickable="false"/>
+                </LinearLayout>
             </LinearLayout>
 
             <Button
                 android:id="@+id/btnReview"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:backgroundTint="@color/black"
                 android:visibility="invisible"
-                android:text="Write a review" />
+                android:text="@string/write_a_review"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="10dp"/>
 
-            <LinearLayout
-                android:id="@+id/reviewListContainer"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="10dp">
-
-                <TextView
-                    android:id="@+id/reviewMessage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="No reviews yet."
-                    android:visibility="gone"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="20sp"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@android:color/darker_gray"/>
-            </LinearLayout>
+                android:verticalSpacing="5dp"
+                android:padding="5dp"
+                android:gravity="center"
+                android:stretchMode="columnWidth"
+                android:background="@color/white"
+                android:layout_margin="10dp" />
         </LinearLayout>
+
     </ScrollView>
 
 </LinearLayout>
