--- a/app/src/main/res/layout/grid_item_main.xml
+++ b/app/src/main/res/layout/grid_item_main.xml
@@ -60,7 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
-            android:textSize="11sp"/>
+            android:textSize="11sp"
+            android:textColor="@color/black"/>
     </LinearLayout>
 
 
